# vox-ocean

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  default-config.toml  project.yml
apps/ios/: TouchMTKView.swift  VoxOceanIOSApp.swift
apps/mac/: InteractiveMTKView.swift  VoxOceanApp.swift  main.swift
apps/shared/: Bridging.h  EngineRenderer.swift
shaders/: apply_edits.metal  dense_field.h  fft.metal  fft_common.h  full_screen.metal  post_fft.metal  ripple.metal  shader_types.h  sky.metal  spectrum.metal  stamp.metal  voxel_grid.h  voxel_march.metal  voxel_surface.metal  voxelize.metal  world_fill.metal
src/bench/: BenchCameraPath.cpp  BenchCameraPath.h  BenchPaths.cpp  BenchPaths.h  BenchPaths_ios.mm  BenchmarkHarness.cpp  BenchmarkHarness.h
src/core/: App.cpp  App.h  AxisCamera.cpp  AxisCamera.h  CameraView.h  Clock.cpp  Clock.h  Config.cpp  Config.h  Hash.h  InputBridge.h  InputEvent.h  OrbitCamera.cpp  OrbitCamera.h  ViewAxis.h
src/engine/: Engine.h  Engine.mm
src/entity/: Boat.cpp  Boat.h  Creature.cpp  Creature.h  CreatureRegistry.cpp  CreatureRegistry.h  Ecosystem.cpp  Ecosystem.h  Fish.cpp  Fish.h  Kelp.cpp  Kelp.h  StampBudget.cpp  StampBudget.h  Wander.cpp  Wander.h
src/gpu/: Buffer.h  Buffer.mm  MetalContext.h  MetalContext.mm  PipelineCache.h  PipelineCache.mm  Texture.h  Texture.mm
src/io/: ContactSheet.cpp  ContactSheet.h  Image.h  PngWriter.cpp  PngWriter.h
src/ocean/: Cascade.h  Cascade.mm  Simulation.h  Simulation.mm  Spectrum.cpp  Spectrum.h  WaterModel.cpp  WaterModel.h
src/render/: IVoxelRenderer.h  RayMarchRenderer.h  RayMarchRenderer.mm  RendererFactory.cpp  RendererFactory.h  SkyRenderer.h  SkyRenderer.mm  VoxelRenderer.h  VoxelRenderer.mm
src/ui/: DebugPanel.cpp  DebugPanel.h  ImGuiBackend.h  ImGuiBackend.mm  ToolPalette.cpp  ToolPalette.h
src/voxel/: Brush.cpp  Brush.h  Dda.cpp  Dda.h  DenseVoxelField.h  DenseVoxelField.mm  FloorGen.cpp  FloorGen.h  GridView.h  MaterialCa.cpp  MaterialCa.h  MaterialRegistry.h  Raycaster.cpp  Raycaster.h  Ripple.cpp  Ripple.h  RippleSim.h  RippleSim.mm  VoxelField.h  VoxelGrid.cpp  VoxelGrid.h  VoxelWorld.cpp  VoxelWorld.h
src/world/: EditList.cpp  EditList.h  RenderFrame.h  World.cpp  World.h
tests/: CMakeLists.txt  app_test.cpp  axis_view_test.cpp  bench_test.cpp  boat_test.cpp  brush_test.cpp  camera_test.cpp  config_test.cpp  contact_sheet_test.cpp  creature_contract_test.cpp  creature_ctx_test.cpp  creature_registry_test.cpp  dda_test.cpp  ecosystem_test.cpp  edit_list_test.cpp  fft_parity_test.cpp  fft_reference_test.cpp  fish_test.cpp  floor_gen_test.cpp  grid_view_test.cpp  kelp_test.cpp  march_palette_test.cpp  material_ca_test.cpp  material_registry_test.cpp  png_writer_test.cpp  raycaster_test.cpp  ripple_test.cpp  spectrum_test.cpp  stamp_budget_test.cpp  voxel_grid_test.cpp  voxel_world_test.cpp  wander_test.cpp  water_model_test.cpp  world_test.cpp
tests/support/: cpu_fft_reference.cpp  cpu_fft_reference.h
